--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-03-17 Fri 16:24 -->
+<!-- 2017-03-18 Sat 16:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title></title>
@@ -232,28 +232,28 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6254a1e">Research</a>
+<li><a href="#orgc9be8ec">Research</a>
 <ul>
-<li><a href="#org76f27eb">System wide startup</a></li>
-<li><a href="#org814718f">Interactive startup</a></li>
-<li><a href="#org94dfd03">Loading a module by path name</a></li>
+<li><a href="#org3f09bb2">System wide startup</a></li>
+<li><a href="#org8de07d7">Interactive startup</a></li>
+<li><a href="#org623d3dd">Loading a module by path name</a></li>
 </ul>
 </li>
-<li><a href="#org731d7af">Implementation</a>
+<li><a href="#org768b75d">Implementation</a>
 <ul>
-<li><a href="#org5b8d7e9">shell helpers</a></li>
-<li><a href="#org207f050">using</a></li>
+<li><a href="#org035040c">shell helpers</a></li>
+<li><a href="#org5c2c6e7">using</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org6254a1e" class="outline-2">
-<h2 id="org6254a1e">Research</h2>
-<div class="outline-text-2" id="text-org6254a1e">
-</div><div id="outline-container-org76f27eb" class="outline-3">
-<h3 id="org76f27eb">System wide startup</h3>
-<div class="outline-text-3" id="text-org76f27eb">
+<div id="outline-container-orgc9be8ec" class="outline-2">
+<h2 id="orgc9be8ec">Research</h2>
+<div class="outline-text-2" id="text-orgc9be8ec">
+</div><div id="outline-container-org3f09bb2" class="outline-3">
+<h3 id="org3f09bb2">System wide startup</h3>
+<div class="outline-text-3" id="text-org3f09bb2">
 <p>
 Setting up configuration for all invocations of python is described in the Python3 docs  <a href="https://docs.python.org/3/tutorial/appendix.html#the-customization-modules">here</a>.
 </p>
@@ -265,21 +265,29 @@ site.getusersitepackages()
 </div>
 </div>
 
-<div id="outline-container-org814718f" class="outline-3">
-<h3 id="org814718f">Interactive startup</h3>
-<div class="outline-text-3" id="text-org814718f">
+<div id="outline-container-org8de07d7" class="outline-3">
+<h3 id="org8de07d7">Interactive startup</h3>
+<div class="outline-text-3" id="text-org8de07d7">
 <p>
-This file is the source for <code>startup.py</code> which is invoked for <b>my</b> user sessions based on the configuration in <code>~/.profile</code>:
+This file is the source for <code>startup.py</code> which could be invoked for <b>my</b> BASH sessions based on the configuration in <code>~/.profile</code>:
 </p>
 <pre class="example">
-PYTHONSTARTUP="$HOME/python/startup/startup.py
+export PYTHONSTARTUP="$HOME/python/startup/startup.py
 </pre>
+<p>
+Unfortuneately, this doesn't seem to really help Emacs and while there is probably a setting somewhere, it is simpler to <code>sudo nano</code> the configuration into <code>/etc/environment</code> as:
+</p>
+<pre class="example">
+PYTHONSTARTUP="/home/benrudgers/python/startup/startup.py
+</pre>
+<p>
+Of course, this probably isn't the best solution if I were using lots of users. Fortunately, I probably came to Linux to late in life to have developed craziness in that regard. Email accounts are another story&#x2026;but I digress and isn't that what literate programming is for?
+</p>
 </div>
 </div>
-
-<div id="outline-container-org94dfd03" class="outline-3">
-<h3 id="org94dfd03">Loading a module by path name</h3>
-<div class="outline-text-3" id="text-org94dfd03">
+<div id="outline-container-org623d3dd" class="outline-3">
+<h3 id="org623d3dd">Loading a module by path name</h3>
+<div class="outline-text-3" id="text-org623d3dd">
 <p>
 There are more <a href="https://stackoverflow.com/questions/67631/how-to-import-a-module-given-the-full-path">descriptions</a> of how to do this than you can shake a stick at. The top answer is:
 </p>
@@ -301,17 +309,17 @@ sys.path.append('/foo/bar/mock-0.3.1')
 </div>
 </div>
 </div>
-<div id="outline-container-org731d7af" class="outline-2">
-<h2 id="org731d7af">Implementation</h2>
-<div class="outline-text-2" id="text-org731d7af">
-</div><div id="outline-container-org5b8d7e9" class="outline-3">
-<h3 id="org5b8d7e9">shell helpers</h3>
-<div class="outline-text-3" id="text-org5b8d7e9">
+<div id="outline-container-org768b75d" class="outline-2">
+<h2 id="org768b75d">Implementation</h2>
+<div class="outline-text-2" id="text-org768b75d">
+</div><div id="outline-container-org035040c" class="outline-3">
+<h3 id="org035040c">shell helpers</h3>
+<div class="outline-text-3" id="text-org035040c">
 <p>
 If I am going to use Python, I want it to help me <b>use</b> my computer and not <b>merely</b> program it. Sometimes I just want <b>commands</b> instead of objects&#x2026;but I suppose I will settle for command like functions. 
 </p>
 <div class="org-src-container">
-<pre class="src src-python" id="orgaa2ff0b">import os
+<pre class="src src-python" id="org1e503c4">import os
 from os import getcwd as pwd
 from os import chdir as cd
 from os import listdir as ls
@@ -320,14 +328,14 @@ from os import mkdir as mkdir
 </div>
 </div>
 </div>
-<div id="outline-container-org207f050" class="outline-3">
-<h3 id="org207f050">using</h3>
-<div class="outline-text-3" id="text-org207f050">
+<div id="outline-container-org5c2c6e7" class="outline-3">
+<h3 id="org5c2c6e7">using</h3>
+<div class="outline-text-3" id="text-org5c2c6e7">
 <p>
 <code>using</code> is a module designed to capture some of the silky goodness of the <code>:use</code> keyword in Common Lisp's <code>defpackage</code>. It is located <a href="https://github.com/brudgers/py_using">here</a>.
 </p>
 <div class="org-src-container">
-<pre class="src src-python" id="org1bbd0d8">from sys import path as path
+<pre class="src src-python" id="org4871c17">from sys import path as path
 path.append('/home/benrudgers/python/using')
 from using import using as using
 </pre>
@@ -338,7 +346,7 @@ from using import using as using
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: benrudgers</p>
-<p class="date">Created: 2017-03-17 Fri 16:24</p>
+<p class="date">Created: 2017-03-18 Sat 16:45</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
